--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
       <artifactId>gs-ui</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.jblas</groupId>
+      <artifactId>jblas</artifactId>
+      <version>1.2.3</version>
+    </dependency>
   </dependencies>
 
   <build>
